# PlaneFight

./: .gitignore  CMakeLists.txt  Project3.slnx  Project3.vcxproj  Project3.vcxproj.filters  README.md  embedded_assets.cpp  embedded_assets.h  main.cpp  resource.h  resources.rc  run_debug.bat
